--- a/public/styles.css
+++ b/public/styles.css
@@ -27,7 +27,7 @@ button {
     padding: 10px 15px;
     border: none;
     background: #28a745;
-    color: white;
+    color: rgb(173, 5, 5);
     font-size: 16px;
     border-radius: 5px;
     cursor: pointer;
